--- a/Presentacion/Presentacion.csproj
+++ b/Presentacion/Presentacion.csproj
@@ -46,16 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InventarioTiendaElectronica.cs">
+    <Compile Include="InventarioTienda.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="InventarioTiendaElectronica.Designer.cs">
-      <DependentUpon>InventarioTiendaElectronica.cs</DependentUpon>
+    <Compile Include="InventarioTienda.Designer.cs">
+      <DependentUpon>InventarioTienda.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="InventarioTiendaElectronica.resx">
-      <DependentUpon>InventarioTiendaElectronica.cs</DependentUpon>
+    <EmbeddedResource Include="InventarioTienda.resx">
+      <DependentUpon>InventarioTienda.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
